--- a/css/index.css
+++ b/css/index.css
@@ -6,35 +6,33 @@
 li {
     list-style: none;
 }
-
 .wrap {
     position: relative;
     display: flex;
-    height: 100vh;
-    width: 100%;
+    width: 75vw;
+    height: 75vh;
 }
 
 .wrap .cover {
     position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    top: 0; left: 0; bottom: 0; right: 0;
     margin: auto;
     position: relative;
     display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 .wrap .cover #background {
-    width: 850px;
-    height: 850px;
+    width: 100%;
+    height: 100%;
     border: 1px solid black;
     overflow: hidden;
 }
 
 .wrap .cover #palette {
     width: 100px;
-    height: 850px;
+    height: 100%;
     margin-left: 2px;
 }
 
